force-app/main/default/objects/Flight_Details__c/Flight_Details__c.object-meta.xml
<CustomObject>
    <label>Flight Detail</label>
    <nameField>
        <displayFormat>&quot;DIC &quot;-{000}</displayFormat>
        <label>Flight_Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flight Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>