force-app/main/default/objects/Flight_Details__c/fields/DistanceInKM__c.field-meta.xml
<CustomField>
    <fullName>DistanceInKM__c</fullName>
    <label>DistanceInKM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>