force-app/main/default/objects/Flight_Details__c/fields/Email_status__c.field-meta.xml
<CustomField>
    <fullName>Email_status__c</fullName>
    <label>Email status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>