force-app/main/default/objects/Flight_Details__c/fields/Passenger_Count__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Count__c</fullName>
    <label>Passenger Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>