force-app/main/default/objects/Flight_Details__c/fields/Pilot_Email__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Email__c</fullName>
    <label>Pilot Email</label>
    <type>Email</type>
</CustomField>