force-app/main/default/objects/Flight_Details__c/fields/Start_CIty__c.field-meta.xml
<CustomField>
    <fullName>Start_CIty__c</fullName>
    <label>Start CIty</label>
    <length>50</length>
    <type>Text</type>
</CustomField>